@@ -48,6 +48,10 @@ with all sufficient information, see the ChangeLog file.
   * misc
     * Mutex#owned? is no longer experimental.
 
+* Process
+  * New methods:
+    * Process.setproctitle() sets the process title without affecting $0.
+
 * String
   * New methods:
     * String#scrub and String#scrub! verify and fix invalid byte sequence.
