@@ -1,3 +1,8 @@
+Wed Aug  7 23:05:55 2013  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ruby.c (Process.setproctitle): New method to change the title of
+	  the running process that is shown in ps(1). [Feature #8696]
+
 Wed Aug  7 20:05:38 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (rb_big_odd_p): Check the bignum length.
